--- a/data/members.yaml
+++ b/data/members.yaml
@@ -72,6 +72,9 @@ list:
   - name: 李舰
     image: https://user-images.githubusercontent.com/7221728/28346855-21adbf2e-6c66-11e7-95d8-171b0fb51c6b.png
     intro: 现任九峰移动医疗 CTO，曾任 Mango Solutions 中国区数据总监。专注于数据科学在行业里的应用。擅长R语言的工程开发与分析建模，是 Rweibo、Rwordseg、tmcn 等 R 包的作者。与肖凯合著了《数据科学中的R语言》，参与翻译了《R语言核心技术手册》、《机器学习与R语言》。
+  - name: 李泳欣
+    image: https://user-images.githubusercontent.com/41461648/43334846-b499dffa-9200-11e8-9090-424fa5d746fc.jpg
+    intro: 本科就读于北京师范大学，北京大学统计科学中心2018级博士。喜欢画好看的图做有趣的分析，努力学习各路知识中。
   - name: 李宇轩
     image: https://cloud.githubusercontent.com/assets/7221728/25788586/d81c09ae-33dc-11e7-8580-05ab733a7c73.jpg
     intro: 人大统院本科生，爱看书（从小喜欢），爱音乐（多听不多唱）、爱运动（玩和看都爱），很喜欢旅游（尤其一人游），虽然现在还是一只小本科僧，但相信自己会有用武之地，不达目的绝不放弃。
